fix(presentations): allow overflow scroll on slides.

--- a/src/components/Slide/Slide.module.scss
+++ b/src/components/Slide/Slide.module.scss
@@ -2,7 +2,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: end;
     align-items: center;
     width: 100vw;
     height: 100vh;
@@ -26,20 +26,13 @@
 
 .slide__contents {
     width: 80vw;
-    height: 80vh;
+    height: 90vh;
+    overflow-y: scroll;
+    &::-webkit-scrollbar {
+        display: none;
+    }
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+    mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) calc(100% - 10vh), rgba(0, 0, 0, 0));
+    padding-bottom: 10vh;
 }
-
-// .slide--mini {
-//     width: 15vw;
-//     height: 15vh;
-//     background-size: cover;
-//     background-position: center;
-//     background-repeat: no-repeat;
-//     overflow: hidden;
-//     transition: all 0.5s ease-in-out;
-//     color: #c9d1d9;
-//     background-color: #0d1117;
-//     > * {
-//         transform: scale(0.15);
-//     }
-// }
